[tool.poetry]
name = "nonebot-plugin-analysis-bilibili"
version = "0.1.0"
description = "nonebot2AI乌托邦pro对话插件"
authors = ["kanzakiD"]
license = "Apache-2.0"
readme = "README.md"

repository = "https://github.com/kanzakiD/nonebot_plugin_ai_topia"
keywords = ["nonebot", "nonebot2"]

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.7"
nonebot2 = "^2.4.1"
nonebot-plugin-send-anything-anywhere = "^0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"